--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,28 @@ jobs:
         node-version: '18'
         cache: 'npm'
 
-    - name: Install dependencies
-      run: npm ci
+    # Новый шаг: удаляем старый lock-файл (на случай, если он остался в кэше)
+    - name: Remove existing package-lock.json
+      run: rm -f package-lock.json
 
+    # Новый шаг: устанавливаем зависимости (это создаст новый package-lock.json)
+    - name: Install dependencies
+      run: npm install
+
+    # Новый шаг: коммитим новый package-lock.json (если он изменился)
+    - name: Commit updated package-lock.json
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add package-lock.json
+        git diff --cached --quiet || git commit -m "Update package-lock.json"
+        git push
+
+    # Основной шаг: сборка проекта
     - name: Build
       run: npm run build
 
+    # Основной шаг: деплой на GitHub Pages
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
